<resources>
    <string name="app_name">Mind Grocery</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total_cost">Total Cost</string>
    <string name="amount">Amount</string>
    <string name="addfloating">add floating action button</string>
    <string name="add_items_to_cart">Add Items To Cart</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_rate">Enter Item Rate</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="total_cart_cost">Total Cart Cost</string>
    <string name="rs_0_0">Rs.0.0</string>
    <string name="total_checked_cost">Total Checked Cost</string>
    <string name="not_checked">NOT CHECKED</string>
    <string name="edit_bt">Edit button</string>
    <string name="title_activity_list_name">ListNameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="about_msg">As we can\'t remember everything, users frequently forget to buy the things they want to buy. However, with the assistance of this app, you can make a list of the groceries you intend to buy so that you don\'t forget anything and also manage grocery budget by turning on budget mode.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="list_name">List Name</string>
    <string name="todo">add a list name</string>
    <string name="add_a_list_name">Add a List Name</string>
    <string name="enter_list_name">Enter List Name</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="read_only_mode">Read Only Mode</string>
    <string name="budget_mode">Budget Mode</string>
    <string name="ok">ok</string>
</resources>