<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        >

        <TextView
            android:id="@+id/textViewDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:gravity="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/linearlayoutAbout"
            android:background="#E8DADA"
            android:gravity="center"
            android:layout_below="@id/textViewDialogTitle"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/about_msg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linearlayoutAbout">


            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>